# hkdio-old

./: .gitignore  CMakeLists.txt  HkdioConfig.h.in  README.md
HkALICE/: CMakeLists.txt  HkALICELinkDef.h  HkAliESDFilter.cxx  HkAliESDFilter.h
HkALICE/PROOF-INF/: SETUP.C
HkBase/: CMakeLists.txt  HkAnalysisSelector.cxx  HkAnalysisSelector.h  HkAnalysisSelectorIO.cxx  HkAnalysisSelectorIO.h  HkBaseLinkDef.h  HkEvent.cxx  HkEvent.h  HkTrack.cxx  HkTrack.h
HkBase/PROOF-INF/: SETUP.C
HkTasks/: CMakeLists.txt  HkAnalysisSelector.cxx  HkAnalysisSelector.h  HkAnalysisSelectorIO.cxx  HkAnalysisSelectorIO.h  HkTask.cxx  HkTask.h  HkTaskInput.cxx  HkTaskInput.h  HkTaskRsn.cxx  HkTaskRsn.h  HkTasksLinkDef.h
HkTasks/PROOF-INF/: SETUP.C
HkZmq/: CMakeLists.txt  HkHn.cxx  HkHn.h  hk-hn.cxx  hk-zmq.cxx  hk-zyre.cxx
cmake/modules/: FindROOT.cmake
cmake/tmpl/: HkTaskExample.cxx  HkTaskExample.h  tmpl.sh
doc/: CMakeLists.txt  hkdio.Doxyfile.in
macros/: Analyse.C  AnalyseIO.C  Generate.C  rootlogon.C
macros/alice/: AddHkESDFilter.C  HkESDFilter.wag  Run.C  input.txt  input_data.txt  input_mc.txt
scripts/: clean.sh  env.sh  make.sh
